<resources>
    <string name="app_name">新闻资讯</string>
    <string name="login">登录界面</string>
    <string name="username">用户名</string>
    <string name="usernameE">请输入用户名</string>
    <string name="password">密码</string>
    <string name="passwordE">请输入密码</string>
    <string name="buttonOk">登录</string>
    <string name="buttonCancel">重置</string>
    <string name="Add">新增</string>
    <string name="Remove">移除</string>
    <string name="net">浏览器</string>
    <string name="http">http</string>
    <string name="host">www.xapi.edu.cn</string>
    <string name="call">打电话</string>
    <string name="backResult">向上返值</string>
    <string name="backApp">退出程序</string>
    <string name="changeImage">换图</string>
    <string name="changeBar">进度条</string>
    <string name="progressDialog">进度弹框</string>
</resources>
