<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonNet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/net" />

        <Button
            android:id="@+id/buttonCall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/call" />

        <Button
            android:id="@+id/buttonBackResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backResult" />

        <Button
            android:id="@+id/buttonBackApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backApp" />

        <Button
            android:id="@+id/buttonProgressDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progressDialog" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>